@@ -1110,7 +1110,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '53';
+$wgStyleVersion = '54';
 
 
 # Server-side caching:
